Try to use internal Continuation class