@@ -25,6 +25,11 @@ java {
     }
 }
 
+compileJava {
+    options.compilerArgs += ["--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED"]
+    options.release.set(null)
+}
+
 dependencies {
     implementation "org.slf4j:slf4j-api:${slf4jVersion}"
     runtimeOnly "org.apache.logging.log4j:log4j-slf4j-impl:${log4jVersion}"
